// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SourceProcessor — beautifying should beautify a comment 1`] = `"<div><!--c--></div>"`;

exports[`SourceProcessor — beautifying should beautify a form the table kept 1`] = `"<table><p><form></form></p></table>"`;

exports[`SourceProcessor — beautifying should beautify a fostered formatting run 1`] = `"<nobr><table><b><colgroup><nobr>"`;

exports[`SourceProcessor — beautifying should beautify a list fostered out of a table 1`] = `"<p><table><ol></ol></table></p>"`;

exports[`SourceProcessor — beautifying should beautify an implied paragraph 1`] = `"<div   class=\\"x\\"    id=y ><p>z</p></div>"`;

exports[`SourceProcessor — beautifying should beautify an unquoted attribute 1`] = `"<img src=a.png alt=hi>"`;

exports[`SourceProcessor — beautifying should beautify attribute spelling 1`] = `"<A HREF='x'   dATa-Y=1 >t</A>"`;

exports[`SourceProcessor — beautifying should beautify implied list items 1`] = `"<ul><li>a</li><li>b</li></ul>"`;

exports[`SourceProcessor — beautifying should beautify implied table sections 1`] = `"<table><tr><td>1</td><td>2</td></tr></table>"`;

exports[`SourceProcessor — beautifying should beautify raw text 1`] = `"<style>a{b:c}</style><script>1<2</script>"`;

exports[`SourceProcessor — minifying what the round-trip guard checks minifies a document whose deferred svg the guard reads back 1`] = `
"<svg viewBox=\\"0 0 8 8\\">   <circle cx=4 cy=4 r=3 />   </svg><table>
	
	<tr><td class=\\"a b\\">y</tr>
</table>
"
`;

exports[`SourceProcessor — minifying what the round-trip guard checks minifies a link inside a link 1`] = `"<a href=/x>a<b> </b></a><b><a href=/y>b</a></b>"`;

exports[`SourceProcessor — minifying what the round-trip guard checks minifies a list nested in a list item 1`] = `"<ul><li>a<ul><li>b</ul></ul>"`;

exports[`SourceProcessor — minifying what the round-trip guard checks minifies a run fostered out of a table 1`] = `"<p><table><ol><li>x</ol></table>"`;

exports[`SourceProcessor — minifying what the round-trip guard checks minifies a second form 1`] = `"<form action=/a><p>xy</form>"`;

exports[`SourceProcessor — minifying what the round-trip guard checks minifies a term nested behind a division 1`] = `"<dl><dt>a<dt>b</dt></dl>"`;

exports[`SourceProcessor — minifying what the round-trip guard checks minifies an inline sheet under a nested list 1`] = `"<ul><li>a<ul><li><style>a{color:red}</style></ul></ul>"`;

exports[`htmlMinify — one document reaching every embedded site minifies with webpack's own minifiers when no renderer is given 1`] = `
"<!doctype html><html lang=en><head><title>   every embedded body   </title><style>.a{color:red;margin:10px}.svg{background:url(\\"data:image/svg+xml,<svg>   <rect  fill='red' />   </svg>\\")}.css{background:url(\\"data:text/css,.i {  color : #ff0000  }\\")}.html{background:url(\\"data:text/html,<div>  <!-- x -->  <p>hi</p>  </div>\\")}.json{background:url('data:application/json,{ \\"a\\" :  1 }')}.js{background:url(\\"data:text/javascript,var  a  =  1 ;\\")}.b64{background:url(data:text/css;base64,LmlubmVyIHsgIGNvbG9yIDogI2ZmMDAwMCAgfQ==)}.png{background:url(data:image/png;base64,AAAA)}</style><script type=application/json>{\\"a\\":1,\\"b\\":[1,2]}</script><script>var  a  =  1 ;  function  f ( ) { return  a }</script></head><body>
<p style=color:red;margin:10px>styled</p>
<svg viewBox=\\"0 0 2 2\\">   <rect fill=red />   </svg>
<iframe srcdoc=\\"<style>.s{color:red}</style><p>   deep   \\"></iframe>
<iframe srcdoc=\\"<p>bare\\"></iframe>

</body></html>"
`;

exports[`htmlMinify — one document reaching every embedded site offers every body to a caller's renderer, and prints each answer 1`] = `
"<!doctype html><html lang=en><head><title>   every embedded body   </title><style>ANSWER(css)</style><script type=application/json>ANSWER(json)</script><script>ANSWER(javascript)</script></head><body>
<p style=ANSWER(css:block-contents)>styled</p>
ANSWER(svg)
<iframe srcdoc=\\"ANSWER(html)\\"></iframe>
<iframe srcdoc=\\"ANSWER(html)\\"></iframe>

</body></html>"
`;

exports[`parseHtml — insertion modes appends a comment after the body to the html element 1`] = `
"| <!DOCTYPE html>
| <html>
|   <!-- foo -->
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes breaks a paragraph out of foreign content 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     <p>
|       <math math>
|     \\"a\\""
`;

exports[`parseHtml — insertion modes breaks out of MathML text integration points 1`] = `
"| <b>
| <math mglyph>
| <i>
| <math malignmark>
| <u>
| <ms>
|   \\"X\\""
`;

exports[`parseHtml — insertion modes clears a table body context across nested tables 1`] = `
"| <html>
|   <head>
|   <body>
|     <a>
|       <a>
|       <table>
|         <tbody>
|           <tr>
|             <td>
|               <a>
|                 <table>
|               <a>
|     <a>
|       <b>
|         \\"X\\"
|       \\"C\\"
|     <a>
|       \\"Y\\""
`;

exports[`parseHtml — insertion modes closes a cell on a mismatched th end tag 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>
|         <tr>
|           <td>"
`;

exports[`parseHtml — insertion modes closes a div across an SVG element 1`] = `
"| <html>
|   <head>
|   <body>
|     <div>
|       <svg svg>
|     \\"a\\""
`;

exports[`parseHtml — insertion modes closes a foreign element by its own end tag 1`] = `
"| <svg g>
|   \\"X\\""
`;

exports[`parseHtml — insertion modes closes an implied tbody from a cell 1`] = `
"| <html>
|   <head>
|   <body>
|     \\"A\\"
|     <table>
|       <tbody>
|         <tr>
|           <td>"
`;

exports[`parseHtml — insertion modes closes an optgroup when the next one opens 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     <select>
|       <optgroup>
|         <option>
|       <optgroup>"
`;

exports[`parseHtml — insertion modes drops a NUL before a frameset 1`] = `
"| <html>
|   <head>
|   <frameset>"
`;

exports[`parseHtml — insertion modes drops a table cell holding nothing but a NUL 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>"
`;

exports[`parseHtml — insertion modes drops an input from a select fragment 1`] = `"| <option>"`;

exports[`parseHtml — insertion modes ends a caption fragment 1`] = `"| <div>"`;

exports[`parseHtml — insertion modes ends a column group on text inside a template 1`] = `
"| <html>
|   <head>
|   <body>
|     <template>
|       content
|         <col>"
`;

exports[`parseHtml — insertion modes ends a frameset fragment 1`] = `"| <frame>"`;

exports[`parseHtml — insertion modes ends a template inside a table body 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>
|         <template>
|           content"
`;

exports[`parseHtml — insertion modes ends the body from an html fragment 1`] = `
"| <head>
| <body>"
`;

exports[`parseHtml — insertion modes foster-parents a formatting element out of a table 1`] = `
"| <html>
|   <head>
|   <body>
|     <a>
|       \\"1\\"
|     <a>
|       \\"3\\"
|     <table>
|       <tbody>
|         <tr>
|           <td>
|             \\"2\\""
`;

exports[`parseHtml — insertion modes foster-parents text between two formatting elements 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     \\"a\\"
|     <i>
|       \\"bc\\"
|       <b>
|         \\"de\\"
|       \\"f\\"
|       <table>"
`;

exports[`parseHtml — insertion modes foster-parents text out of a column group 1`] = `
"| <html>
|   <head>
|   <body>
|     \\"foo\\"
|     <table>
|       <colgroup>
|         \\" \\""
`;

exports[`parseHtml — insertion modes fosters an adoption-agency reparent out of a table 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>
|         <tr>
|           <td>
|             <i>
|               \\"a\\"
|             <div>
|               <i>
|                 \\"b\\"
|                 <b>
|                   \\"c\\"
|               <b>
|                 \\"d\\"
|             <table>"
`;

exports[`parseHtml — insertion modes handles a break and a comment in head noscript 1`] = `
"| <html>
|   <head>
|     <noscript>
|   <body>
|     <br>
|     <!-- foo -->"
`;

exports[`parseHtml — insertion modes ignores a column group end tag inside a template 1`] = `
"| <html>
|   <head>
|   <body>
|     <template>
|       content
|         <col>"
`;

exports[`parseHtml — insertion modes ignores a doctype after after the body 1`] = `
"| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a doctype after head 1`] = `
"| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a doctype after the body 1`] = `
"| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a doctype before head 1`] = `
"| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a doctype in foreign content 1`] = `
"| <html>
|   <head>
|   <body>
|     <svg svg>"
`;

exports[`parseHtml — insertion modes ignores a doctype in head 1`] = `
"| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a doctype inside a column group 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <colgroup>"
`;

exports[`parseHtml — insertion modes ignores a foreign end tag with no match 1`] = `"| \\"X\\""`;

exports[`parseHtml — insertion modes ignores a frameset start tag in an SVG desc fragment 1`] = `"| \\"X\\""`;

exports[`parseHtml — insertion modes ignores a paragraph end tag after head 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <!-- foo -->
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a plaintext end tag in a plaintext fragment 1`] = `"| \\"</plaintext>\\""`;

exports[`parseHtml — insertion modes ignores a repeated head end tag in head 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|     <meta>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a repeated head start tag after head 1`] = `
"| <html>
|   <head>
|     <template>
|       content
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a row end tag inside a template 1`] = `
"| <html>
|   <head>
|   <body>
|     <template>
|       content
|         <td>
|         <td>"
`;

exports[`parseHtml — insertion modes ignores a row end tag inside a template cell 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <template>
|         content
|           <td>
|             <div>"
`;

exports[`parseHtml — insertion modes ignores a second doctype before html 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a second form end tag inside a template 1`] = `
"| <html>
|   <head>
|     <template>
|       content
|         <form>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a second form in a table 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     <table>
|       <form>"
`;

exports[`parseHtml — insertion modes ignores a stray menuitem end tag 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a table end tag inside a template 1`] = `
"| <html>
|   <head>
|   <body>
|     <template>
|       content
|         <thead>
|         <tbody>"
`;

exports[`parseHtml — insertion modes ignores a tbody start tag inside MathML in a thead fragment 1`] = `
"| <math math>
|   <math thead>
|     <math mo>"
`;

exports[`parseHtml — insertion modes ignores a template end tag after head 1`] = `
"| <html>
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes ignores a template end tag with no template open 1`] = `
"| <html>
|   <head>
|   <body>
|     <div>"
`;

exports[`parseHtml — insertion modes ignores a thead end tag in a table body 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>"
`;

exports[`parseHtml — insertion modes ignores every end tag the in-table insertion mode has no arc for 1`] = `
"| <html>
|   <head>
|   <body>
|     <br>
|     <table>
|       <tbody>
|         <tr>
|     <p>"
`;

exports[`parseHtml — insertion modes ignores table-section end tags in a row fragment 1`] = `"| <td>"`;

exports[`parseHtml — insertion modes ignores the end tags a cell has no arc for 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>
|         <tr>
|           <td>
|             \\"foo\\""
`;

exports[`parseHtml — insertion modes ignores the end tags a table body has no arc for 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>"
`;

exports[`parseHtml — insertion modes implies the end of a ruby base 1`] = `
"| <html>
|   <head>
|   <body>
|     <ruby>
|       \\"a\\"
|       <rb>
|         \\"b\\"
|       <rb>"
`;

exports[`parseHtml — insertion modes keeps a frameset out once text arrived 1`] = `
"| <html>
|   <head>
|   <body>
|     \\"aa\\""
`;

exports[`parseHtml — insertion modes keeps an end tag inside a script fragment 1`] = `"| \\"<!-- inside </script> -->\\""`;

exports[`parseHtml — insertion modes leaves annotation-xml when its SVG child closes 1`] = `
"| <html>
|   <head>
|   <body>
|     <math math>
|       <math annotation-xml>
|         <svg svg>
|       <math mi>"
`;

exports[`parseHtml — insertion modes merges a repeated body start tag inside a template 1`] = `
"| <html>
|   <head>
|   <body>
|     a=\\"b\\"
|     <template>
|       content
|         <div>
|         <div>"
`;

exports[`parseHtml — insertion modes merges a repeated html start tag after head 1`] = `
"| <!DOCTYPE html>
| <html>
|   a=\\"b\\"
|   c=\\"d\\"
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes merges a repeated html start tag after the body 1`] = `
"| <!DOCTYPE html>
| <html>
|   id=\\"x\\"
|   <head>
|   <body>
|     \\"X\\""
`;

exports[`parseHtml — insertion modes merges a repeated html start tag before head 1`] = `
"| <!DOCTYPE html>
| <html>
|   abc:def=\\"gh\\"
|   <head>
|   <body>
|     <xyz:abc>"
`;

exports[`parseHtml — insertion modes merges a repeated html start tag in head 1`] = `
"| <!DOCTYPE html>
| <html>
|   id=\\"x\\"
|   <head>
|   <body>"
`;

exports[`parseHtml — insertion modes merges a repeated html start tag in head noscript 1`] = `
"| <html>
|   class=\\"foo\\"
|   <head>
|     <noscript>
|       <!-- foo -->
|   <body>"
`;

exports[`parseHtml — insertion modes merges html attributes across a template 1`] = `
"| <html>
|   a=\\"b\\"
|   <head>
|     <template>
|       content
|         <div>
|           <span>
|   <body>"
`;

exports[`parseHtml — insertion modes nests framesets and switches to after-frameset 1`] = `
"| <html>
|   <head>
|   <frameset>
|     <frame>
|     <frameset>
|       <frame>
|     <noframes>
|       \\"</frameset><noframes>\\""
`;

exports[`parseHtml — insertion modes opens a column group inside a template 1`] = `
"| <html>
|   <head>
|   <body>
|     <template>
|       content
|         <col>"
`;

exports[`parseHtml — insertion modes opens a row inside a template 1`] = `
"| <html>
|   <head>
|   <body>
|     <template>
|       content
|         <tr>
|         <div>"
`;

exports[`parseHtml — insertion modes opens a template with no body yet 1`] = `
"| <html>
|   <head>
|     <template>
|       content
|   <body>"
`;

exports[`parseHtml — insertion modes opens an implied tbody in a table fragment 1`] = `
"| <tbody>
|   <tr>"
`;

exports[`parseHtml — insertion modes parses a body start tag in an SVG desc fragment 1`] = `"| \\"X\\""`;

exports[`parseHtml — insertion modes parses a template fragment with a form in it 1`] = `
"| <template>
|   content
|     <form>
|       <input>
|         name=\\"q\\"
|     <div>
|       \\"second\\""
`;

exports[`parseHtml — insertion modes pops a select and a template out of a cell 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>
|         <tr>
|           <td>
|             <select>
|               <template>
|                 content
|                   \\"Foo\\"
|       <caption>
|         \\"A\\""
`;

exports[`parseHtml — insertion modes re-nests a badly nested table, font and anchor 1`] = `
"| <html>
|   <head>
|   <body>
|     <center>
|       <center>
|     <font>
|       \\"
\\"
|     <table>
|       \\"
\\"
|       <tbody>
|         <tr>
|           \\"
\\"
|           <td>
|         <tr>
|           \\"
\\"
|     <table>
|       <tbody>
|         <tr>
|     <font>
|       \\"
\\"
|       <p>
|       \\"
\\"
|       <a>
|     <a>
|       <font>
|     <font>
|       \\"
This page contains an insanely badly-nested tag sequence.\\""
`;

exports[`parseHtml — insertion modes reads a textarea fragment as text 1`] = `"| \\"direct textarea content\\""`;

exports[`parseHtml — insertion modes reads noframes text after the frameset closed 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <frameset>
|   <noframes>
|     \\"abc\\""
`;

exports[`parseHtml — insertion modes reconstructs nobr across a table and a marquee 1`] = `
"| <html>
|   <head>
|   <body>
|     <nobr>
|       <marquee>
|       <table>
|     <nobr>"
`;

exports[`parseHtml — insertion modes reopens a form once the table that held it closed 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     <table>
|       <form>"
`;

exports[`parseHtml — insertion modes runs the adoption agency past its outer-loop limit 1`] = `
"| <html>
|   <head>
|   <body>
|     <div>
|       <a>
|         <b>
|       <b>
|         <div>
|           <a>
|           <div>
|             <a>
|             <div>
|               <a>
|               <div>
|                 <a>
|                 <div>
|                   <a>
|                   <div>
|                     <a>
|                     <div>
|                       <a>
|                       <div>
|                         <a>
|                           <div>
|                             <div>"
`;

exports[`parseHtml — insertion modes runs thorough implied end tags for a template in a table 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <thead>
|         <template>
|           content
|             <td>"
`;

exports[`parseHtml — insertion modes strips the newline a pre element starts with 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     <pre>"
`;

exports[`parseHtml — insertion modes treats a self-closed math element as foreign 1`] = `
"| <!DOCTYPE html>
| <html>
|   <head>
|   <body>
|     <math math>
|     <foo>"
`;

exports[`parseHtml — insertion modes treats an html start tag in a column group as in-body 1`] = `
"| <html>
|   <head>
|   <body>
|     <table>
|       <colgroup>"
`;

exports[`tokenize should tokenize and roundtrip "attributes.html" 1`] = `
Array [
  Array [
    "attribute",
    "class",
    "double",
    1,
  ],
  Array [
    "attribute",
    "id",
    "single",
    2,
  ],
  Array [
    "attribute",
    "data-raw",
    "unquoted",
    0,
  ],
  Array [
    "open-tag",
    "<div class=\\"double\\" id='single' data-raw=unquoted>",
    "div",
    false,
  ],
  Array [
    "close-tag",
    "</div>",
    "div",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "href",
    "https://example.com?a=1&amp;b=2",
    1,
  ],
  Array [
    "open-tag",
    "<a href=\\"https://example.com?a=1&amp;b=2\\">",
    "a",
    false,
  ],
  Array [
    "text",
    "Link",
  ],
  Array [
    "close-tag",
    "</a>",
    "a",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "value",
    "",
    1,
  ],
  Array [
    "open-tag",
    "<input value=\\"\\">",
    "input",
    false,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "data-empty",
    "",
    2,
  ],
  Array [
    "open-tag",
    "<div data-empty=''>",
    "div",
    false,
  ],
  Array [
    "close-tag",
    "</div>",
    "div",
  ],
  Array [
    "text",
    "
",
  ],
]
`;

exports[`tokenize should tokenize and roundtrip "basic.html" 1`] = `
Array [
  Array [
    "doctype",
    "<!DOCTYPE html>",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "lang",
    "en",
    1,
  ],
  Array [
    "open-tag",
    "<html lang=\\"en\\">",
    "html",
    false,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<head>",
    "head",
    false,
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "attribute",
    "charset",
    "UTF-8",
    1,
  ],
  Array [
    "open-tag",
    "<meta charset=\\"UTF-8\\">",
    "meta",
    false,
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "open-tag",
    "<title>",
    "title",
    false,
  ],
  Array [
    "text",
    "Basic Test",
  ],
  Array [
    "close-tag",
    "</title>",
    "title",
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "attribute",
    "rel",
    "stylesheet",
    1,
  ],
  Array [
    "attribute",
    "href",
    "./style.css",
    1,
  ],
  Array [
    "open-tag",
    "<link rel=\\"stylesheet\\" href=\\"./style.css\\">",
    "link",
    false,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "close-tag",
    "</head>",
    "head",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<body>",
    "body",
    false,
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "open-tag",
    "<h1>",
    "h1",
    false,
  ],
  Array [
    "text",
    "Hello World",
  ],
  Array [
    "close-tag",
    "</h1>",
    "h1",
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "attribute",
    "class",
    "intro",
    1,
  ],
  Array [
    "open-tag",
    "<p class=\\"intro\\">",
    "p",
    false,
  ],
  Array [
    "text",
    "Welcome to webpack",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "attribute",
    "src",
    "./logo.png",
    1,
  ],
  Array [
    "attribute",
    "alt",
    "Logo",
    1,
  ],
  Array [
    "open-tag",
    "<img src=\\"./logo.png\\" alt=\\"Logo\\">",
    "img",
    false,
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "attribute",
    "href",
    "/about",
    1,
  ],
  Array [
    "open-tag",
    "<a href=\\"/about\\">",
    "a",
    false,
  ],
  Array [
    "text",
    "About",
  ],
  Array [
    "close-tag",
    "</a>",
    "a",
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "open-tag",
    "<br/>",
    "br",
    true,
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "attribute",
    "type",
    "text",
    1,
  ],
  Array [
    "attribute",
    "value",
    "test",
    1,
  ],
  Array [
    "attribute",
    "disabled",
    null,
    0,
  ],
  Array [
    "open-tag",
    "<input type=\\"text\\" value=\\"test\\" disabled>",
    "input",
    false,
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "comment",
    "<!-- This is a comment -->",
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "attribute",
    "id",
    "app",
    1,
  ],
  Array [
    "attribute",
    "data-value",
    "single-quoted",
    2,
  ],
  Array [
    "open-tag",
    "<div id=\\"app\\" data-value='single-quoted'>",
    "div",
    false,
  ],
  Array [
    "close-tag",
    "</div>",
    "div",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "close-tag",
    "</body>",
    "body",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "close-tag",
    "</html>",
    "html",
  ],
  Array [
    "text",
    "
",
  ],
]
`;

exports[`tokenize should tokenize and roundtrip "character-references.html" 1`] = `
Array [
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "Tom &amp; Jerry",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "href",
    "?a=1&amp;b=2",
    1,
  ],
  Array [
    "open-tag",
    "<a href=\\"?a=1&amp;b=2\\">",
    "a",
    false,
  ],
  Array [
    "text",
    "link",
  ],
  Array [
    "close-tag",
    "</a>",
    "a",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "href",
    "?x=1&lt;2",
    2,
  ],
  Array [
    "open-tag",
    "<a href='?x=1&lt;2'>",
    "a",
    false,
  ],
  Array [
    "text",
    "link2",
  ],
  Array [
    "close-tag",
    "</a>",
    "a",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "href",
    "?q=1&gt;2",
    0,
  ],
  Array [
    "open-tag",
    "<a href=?q=1&gt;2>",
    "a",
    false,
  ],
  Array [
    "text",
    "link3",
  ],
  Array [
    "close-tag",
    "</a>",
    "a",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&#65;&#66;&#67;",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&#x41;&#x42;&#x43;",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&#X41;",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "bare & alone",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&unknown;",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&amp without semicolon",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&#;",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&#x;",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "&#999;",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
]
`;

exports[`tokenize should tokenize and roundtrip "comments.html" 1`] = `
Array [
  Array [
    "comment",
    "<!-- Single comment -->",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "Between comments",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "comment",
    "<!-- Multi
line
comment -->",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "After multi-line",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "comment",
    "<!---->",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "Empty comment above",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
",
  ],
]
`;

exports[`tokenize should tokenize and roundtrip "nested.html" 1`] = `
Array [
  Array [
    "open-tag",
    "<div>",
    "div",
    false,
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "open-tag",
    "<p>",
    "p",
    false,
  ],
  Array [
    "text",
    "Nested ",
  ],
  Array [
    "open-tag",
    "<strong>",
    "strong",
    false,
  ],
  Array [
    "text",
    "bold ",
  ],
  Array [
    "open-tag",
    "<em>",
    "em",
    false,
  ],
  Array [
    "text",
    "italic",
  ],
  Array [
    "close-tag",
    "</em>",
    "em",
  ],
  Array [
    "close-tag",
    "</strong>",
    "strong",
  ],
  Array [
    "text",
    " text",
  ],
  Array [
    "close-tag",
    "</p>",
    "p",
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "open-tag",
    "<ul>",
    "ul",
    false,
  ],
  Array [
    "text",
    "
		",
  ],
  Array [
    "open-tag",
    "<li>",
    "li",
    false,
  ],
  Array [
    "text",
    "Item 1",
  ],
  Array [
    "close-tag",
    "</li>",
    "li",
  ],
  Array [
    "text",
    "
		",
  ],
  Array [
    "open-tag",
    "<li>",
    "li",
    false,
  ],
  Array [
    "text",
    "Item 2",
  ],
  Array [
    "close-tag",
    "</li>",
    "li",
  ],
  Array [
    "text",
    "
	",
  ],
  Array [
    "close-tag",
    "</ul>",
    "ul",
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "close-tag",
    "</div>",
    "div",
  ],
  Array [
    "text",
    "
",
  ],
]
`;

exports[`tokenize should tokenize and roundtrip "self-closing.html" 1`] = `
Array [
  Array [
    "attribute",
    "src",
    "logo.png",
    1,
  ],
  Array [
    "attribute",
    "alt",
    "Logo",
    1,
  ],
  Array [
    "open-tag",
    "<img src=\\"logo.png\\" alt=\\"Logo\\">",
    "img",
    false,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<br>",
    "br",
    false,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "open-tag",
    "<hr/>",
    "hr",
    true,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "type",
    "text",
    1,
  ],
  Array [
    "attribute",
    "required",
    null,
    0,
  ],
  Array [
    "open-tag",
    "<input type=\\"text\\" required>",
    "input",
    false,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "charset",
    "UTF-8",
    1,
  ],
  Array [
    "open-tag",
    "<meta charset=\\"UTF-8\\">",
    "meta",
    false,
  ],
  Array [
    "text",
    "
",
  ],
  Array [
    "attribute",
    "rel",
    "icon",
    1,
  ],
  Array [
    "attribute",
    "href",
    "favicon.ico",
    1,
  ],
  Array [
    "open-tag",
    "<link rel=\\"icon\\" href=\\"favicon.ico\\">",
    "link",
    false,
  ],
  Array [
    "text",
    "
",
  ],
]
`;
